// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders DynamicLocation component 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <MapView
    provider="google"
    showsUserLocation={true}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <Callout>
    <View
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.3)",
          "width": 500,
        }
      }
    >
      <Text
        accessibilityLabel="Hello! Journey Time is 0 Minutes and the distance is 
 null KM"
        style={
          Object {
            "color": "hotpink",
            "fontFamily": "Verdana",
            "fontSize": 40,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        0 Minutes 
 null KM
      </Text>
    </View>
  </Callout>
</View>
`;

exports[`Should test for setState changes to journeyTime and journeyDistance 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DynamicLocation />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MockMapView
          provider="google"
          showsUserLocation={true}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <MapViewDirections
            apikey="AIzaSyCbhVNmiXfsH9OAomH1G2je9QfFqD8sqtc"
            destination="Westminster Bridge, London SE1 7GP"
            mode="walking"
            onReady={[Function]}
            origin="50 commercial st UK"
            strokeColor="hotpink"
            strokeWidth={3}
          />
        </MockMapView>,
        <Unknown>
          <Component
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.3)",
                "width": 500,
              }
            }
          >
            <Component
              accessibilityLabel="Hello! Journey Time is 0 Minutes and the distance is 
 null KM"
              style={
                Object {
                  "color": "hotpink",
                  "fontFamily": "Verdana",
                  "fontSize": 40,
                  "fontWeight": "bold",
                  "textAlign": "center",
                }
              }
            >
              0 Minutes 
 null KM
            </Component>
          </Component>
        </Unknown>,
      ],
      "style": Object {
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            " ",
            "null - Time 
 null - Distance",
          ],
          "style": Object {
            "flex": 0.25,
          },
        },
        "ref": null,
        "rendered": Array [
          " ",
          "null - Time 
 null - Distance",
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            null,
            <MapViewDirections
              apikey="AIzaSyCbhVNmiXfsH9OAomH1G2je9QfFqD8sqtc"
              destination={
                Object {
                  "latitude": 51.523018,
                  "longitude": -0.087029,
                }
              }
              mode="walking"
              onReady={[Function]}
              origin={
                Object {
                  "latitude": 51.5002,
                  "longitude": 0.1332,
                }
              }
              strokeColor="hotpink"
              strokeWidth={3}
            />,
          ],
          "provider": "google",
          "region": undefined,
          "showsUserLocation": true,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "apikey": "AIzaSyCbhVNmiXfsH9OAomH1G2je9QfFqD8sqtc",
              "destination": Object {
                "latitude": 51.523018,
                "longitude": -0.087029,
              },
              "mode": "walking",
              "onReady": [Function],
              "origin": Object {
                "latitude": 51.5002,
                "longitude": 0.1332,
              },
              "strokeColor": "hotpink",
              "strokeWidth": 3,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Component
            style={
              Object {
                "backgroundColor": "rgba(255, 255, 255, 0.3)",
                "width": 500,
              }
            }
          >
            <Component
              accessibilityLabel="Hello! Journey Time is 0 Minutes and the distance is 
 null KM"
              style={
                Object {
                  "color": "hotpink",
                  "fontFamily": "Verdana",
                  "fontSize": 40,
                  "fontWeight": "bold",
                  "textAlign": "center",
                }
              }
            >
              0 Minutes 
 null KM
            </Component>
          </Component>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Component
              accessibilityLabel="Hello! Journey Time is 0 Minutes and the distance is 
 null KM"
              style={
                Object {
                  "color": "hotpink",
                  "fontFamily": "Verdana",
                  "fontSize": 40,
                  "fontWeight": "bold",
                  "textAlign": "center",
                }
              }
            >
              0 Minutes 
 null KM
            </Component>,
            "style": Object {
              "backgroundColor": "rgba(255, 255, 255, 0.3)",
              "width": 500,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessibilityLabel": "Hello! Journey Time is 0 Minutes and the distance is 
 null KM",
              "children": "0 Minutes 
 null KM",
              "style": Object {
                "color": "hotpink",
                "fontFamily": "Verdana",
                "fontSize": 40,
                "fontWeight": "bold",
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "0 Minutes 
 null KM",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MockMapView
            provider="google"
            showsUserLocation={true}
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <MapViewDirections
              apikey="AIzaSyCbhVNmiXfsH9OAomH1G2je9QfFqD8sqtc"
              destination="Westminster Bridge, London SE1 7GP"
              mode="walking"
              onReady={[Function]}
              origin="50 commercial st UK"
              strokeColor="hotpink"
              strokeWidth={3}
            />
          </MockMapView>,
          <Unknown>
            <Component
              style={
                Object {
                  "backgroundColor": "rgba(255, 255, 255, 0.3)",
                  "width": 500,
                }
              }
            >
              <Component
                accessibilityLabel="Hello! Journey Time is 0 Minutes and the distance is 
 null KM"
                style={
                  Object {
                    "color": "hotpink",
                    "fontFamily": "Verdana",
                    "fontSize": 40,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                0 Minutes 
 null KM
              </Component>
            </Component>
          </Unknown>,
        ],
        "style": Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              " ",
              "null - Time 
 null - Distance",
            ],
            "style": Object {
              "flex": 0.25,
            },
          },
          "ref": null,
          "rendered": Array [
            " ",
            "null - Time 
 null - Distance",
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              null,
              <MapViewDirections
                apikey="AIzaSyCbhVNmiXfsH9OAomH1G2je9QfFqD8sqtc"
                destination={
                  Object {
                    "latitude": 51.523018,
                    "longitude": -0.087029,
                  }
                }
                mode="walking"
                onReady={[Function]}
                origin={
                  Object {
                    "latitude": 51.5002,
                    "longitude": 0.1332,
                  }
                }
                strokeColor="hotpink"
                strokeWidth={3}
              />,
            ],
            "provider": "google",
            "region": undefined,
            "showsUserLocation": true,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "apikey": "AIzaSyCbhVNmiXfsH9OAomH1G2je9QfFqD8sqtc",
              "destination": "Westminster Bridge, London SE1 7GP",
              "mode": "walking",
              "onReady": [Function],
              "origin": "50 commercial st UK",
              "strokeColor": "hotpink",
              "strokeWidth": 3,
          "rendered": Array [
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "apikey": "AIzaSyCbhVNmiXfsH9OAomH1G2je9QfFqD8sqtc",
                "destination": Object {
                  "latitude": 51.523018,
                  "longitude": -0.087029,
                },
                "mode": "walking",
                "onReady": [Function],
                "origin": Object {
                  "latitude": 51.5002,
                  "longitude": 0.1332,
                },
                "strokeColor": "hotpink",
                "strokeWidth": 3,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Component
              style={
                Object {
                  "backgroundColor": "rgba(255, 255, 255, 0.3)",
                  "width": 500,
                }
              }
            >
              <Component
                accessibilityLabel="Hello! Journey Time is 0 Minutes and the distance is 
 null KM"
                style={
                  Object {
                    "color": "hotpink",
                    "fontFamily": "Verdana",
                    "fontSize": 40,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                0 Minutes 
 null KM
              </Component>
            </Component>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Component
                accessibilityLabel="Hello! Journey Time is 0 Minutes and the distance is 
 null KM"
                style={
                  Object {
                    "color": "hotpink",
                    "fontFamily": "Verdana",
                    "fontSize": 40,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  }
                }
              >
                0 Minutes 
 null KM
              </Component>,
              "style": Object {
                "backgroundColor": "rgba(255, 255, 255, 0.3)",
                "width": 500,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessibilityLabel": "Hello! Journey Time is 0 Minutes and the distance is 
 null KM",
                "children": "0 Minutes 
 null KM",
                "style": Object {
                  "color": "hotpink",
                  "fontFamily": "Verdana",
                  "fontSize": 40,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              },
              "ref": null,
              "rendered": "0 Minutes 
 null KM",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Should test for setState changes to locationChanged: Something Updated 1`] = `
Object {
  "isLoading": true,
  "journeyDistance": null,
  "journeyTime": null,
  "location": Object {
    "coords": Object {
      "latitude": -0.09,
      "longitude": 51,
    },
  },
  "markers": Array [],
  "region": Object {
    "latitude": -0.09,
    "latitudeDelta": 0.1,
    "longitude": 51,
    "longitudeDelta": 0.05,
  },
}
`;

exports[`Should test for setState changes to locationChanged: something 1`] = `
Object {
  "isLoading": true,
  "journeyDistance": null,
  "journeyTime": null,
  "location": Object {
    "coords": Object {
      "latitude": -0.09,
      "longitude": 51,
    },
  },
  "markers": Array [],
}
`;
